Added text to readme

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
 <body>
   <div class='parameters'>Change options
-  <div class='colors'>Colors</div>
-    <div class='sizes'>Sizing
-  <button  class='default'>16x16</button>
-  <div class='custom'>Set custom
-      <input type='number'>
+      <div class='sizes'>Sizing
+  
+  <div class='custom'>Set custom size
+      <input id='number' type='number'>
     <button id='submit' type='submit'>Submit</button>
       </div>
     </div>
   <button id='reset'>reset</button>
   </div>
 
-    <div class="container">
+    <div class="container" id='mainBox'>
     <div class="top">Etch-a-Sketch</div>
     <div class="center">
         <div class="center-left"></div>
